--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# WARNING: If are using a recent version of Next.js you may need to add a prefix to "PUBLISHABLE_KEY" so that Next.js makes it available in the  browser context
+# WARNING: If are using a recent version of Next.js you may need to add a prefix to "NEXT_PUBLIC_PUBLISHABLE_KEY" so that Next.js makes it available in the  browser context
 # More info: https://nextjs.org/docs/basic-features/environment-variables#exposing-environment-variables-to-the-browser
 
-PUBLISHABLE_KEY=pk_test_1234
-SECRET_KEY=sk_test_1234
+NEXT_PUBLIC_PUBLISHABLE_KEY=pk_live_jEtAC6HuAPCGxhifXzz7mW2D00wqN81pkY
+SECRET_KEY=sk_live_GvJpfbb3OXPm97XxV1IzP12w004zE3b3Bk
